# Arkanoid

./: Arkanoid.sln  Arkanoid.slnx  Arkanoid.vcxproj  Arkanoid.vcxproj.filters  Ball.cpp  Ball.h  Brick.cpp  Brick.h  CMakeLists.txt  Game.cpp  Game.h  Item.cpp  Item.h  Paddle.cpp  Paddle.h  README.md  level1.txt  level2.txt  main.cpp
Arkanoid/: Arkanoid.vcxproj  Arkanoid.vcxproj.filters  Ball.cpp  Ball.h  Brick.h  Game.cpp  Game.h  Paddle.cpp  Paddle.h  main.cpp
assets/: level1.txt
